# Proyecto-Investigacion-Crosstalk

./: .gitignore  README.md
XTC plugin 2025/: Untitled1.prj  XTC01.asv  XTC01.m  XTC01.txt  XTC01_02.m  XTC02.m  XTC03.m  XTC04.m  XTC05.m  XTC05.txt  XTC06.m  XTC07.m  XTC08.m  XTC_Processor.m  XTC_Processor.txt  generate_core_code.m  generate_core_code_class.m  pruebasGraficos.m  pruebasXTC03_10_07_25_Genius.m  testbench_XTC05.m  testbench_XTC07.m  transauralIRApp.m  transauralIRApp.txt  transaural_ir.m  transaural_ir.txt  transaural_ir2.m  transaural_ir3.m  untitled4.asv  untitled4.m  untitled4.txt  xtc_processor_func.m  xtc_processor_func.prj  xtc_wrapper.asv  xtc_wrapper.m
XTC plugin 2025 C++/: XTC plugin 2025 C++.jucer
XTC plugin 2025 C++/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
XTC plugin 2025 C++/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
XTC plugin 2025 C++/Source/MATLAB/: AsyncBuffer.cpp  AsyncBuffer.h  AsyncBuffercgHelper.h  FrequencyDomainFIRFilter.cpp  NoPartitionOS.h  XTC_Processor.cpp  circshift.h  rtwtypes.h  xtc_wrapper_data.cpp  xtc_wrapper_data.h  xtc_wrapper_initialize.h  (+2 more)
XTC plugin 2025/anteriores/: CrossConvolverStereo.m  CrosstalkConvolver.m  FastConvolver.m  FastConvolverStereo.m
XTC plugin 2025/transaural_IR_app/: CMakeLists.txt  appwindow.cpp  appwindow.h  irfilemanager.cpp  irfilemanager.h  irgenerator.cpp  irgenerator.h  irvisualizer.cpp  irvisualizer.h  main.cpp  parameters.cpp  parameters.h
codigo c++/: NewProject.jucer
codigo c++/JuceLibraryCode/: JucePluginDefines.h
(+185 files in other folders)
